# set-git-hooks-dir

./: CHANGELOG.md  CONTRIBUTING.md  README.md
.git-hooks/: pre-push
.github/workflows/: ci.yaml
npm/: .gitignore  README.md  bin.js  index.ts  main.ts  package-lock.json  package.json  test.ts  tsconfig.json
python/: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
python/scripts/: publish.bash
python/set_git_hooks_dir/: __init__.py
python/test/: test_setup.py
ruby/: .gitignore  .rufo  Gemfile  README.md  Rakefile  plugins.rb  set_git_hooks_dir.gemspec
ruby/.bundle/: config
ruby/lib/: rubygems_plugin.rb  set_git_hooks_dir.rb
ruby/test/: test_set_hooks.rb
rust/: Cargo.toml  README.md  build.rs
rust/src/: installer.rs  lib.rs  main.rs
rust/tests/: lib.rs
