[package]
name = "set-git-hooks-dir"
version = "0.0.0"
edition = "2021"
description = "Deadly simple Git hooks directory setup tool"
license = "MIT"
include = ["src", "LICENSE"]
keywords = ["git", "hooks", "pre-commit", "pre-push", "husky"]

[features]
default = ["setup-on-build"]
setup-on-build = []

[dependencies]

[dev-dependencies]
tempfile = "3.10.1"
